--- a/homework/Day_004_HW.ipynb
+++ b/homework/Day_004_HW.ipynb
@@ -134,18 +134,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1)The shape of sub_tain is  (307511, 7) \n",
+      "(1)The shape of sub_tain is  (307511, 1) \n",
       "============================================\n",
       " \n",
       "(2)The first five rows of sub_train is \n",
       "\n",
-      "    FRIDAY  MONDAY  SATURDAY  SUNDAY  THURSDAY  TUESDAY  WEDNESDAY\n",
-      "0       0       0         0       0         0        0          1\n",
-      "1       0       1         0       0         0        0          0\n",
-      "2       0       1         0       0         0        0          0\n",
-      "3       0       0         0       0         0        0          1\n",
-      "4       0       0         0       0         1        0          0\n"
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FRIDAY</th>\n",
+       "      <th>MONDAY</th>\n",
+       "      <th>SATURDAY</th>\n",
+       "      <th>SUNDAY</th>\n",
+       "      <th>THURSDAY</th>\n",
+       "      <th>TUESDAY</th>\n",
+       "      <th>WEDNESDAY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FRIDAY  MONDAY  SATURDAY  SUNDAY  THURSDAY  TUESDAY  WEDNESDAY\n",
+       "0       0       0         0       0         0        0          1\n",
+       "1       0       1         0       0         0        0          0\n",
+       "2       0       1         0       0         0        0          0\n",
+       "3       0       0         0       0         0        0          1\n",
+       "4       0       0         0       0         1        0          0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -153,10 +246,11 @@
     "Your Code Here\n",
     "\"\"\"\n",
     "\n",
-    "sub_train = pd.get_dummies(app_train['WEEKDAY_APPR_PROCESS_START'])\n",
+    "sub_train_dummies = pd.get_dummies(app_train['WEEKDAY_APPR_PROCESS_START'])\n",
     "print(\"(1)The shape of sub_tain is \",sub_train.shape,\n",
     "      \"\\n============================================\\n\",\n",
-    "      \"\\n(2)The first five rows of sub_train is \\n\\n\",  sub_train.head())\n"
+    "      \"\\n(2)The first five rows of sub_train is \\n\\n\")\n",
+    "sub_train_dummies.head()\n"
    ]
   }
  ],
